--- a/vignettes/use-read-data.Rmd
+++ b/vignettes/use-read-data.Rmd
@@ -2,12 +2,16 @@
 title: "Read and Combine Binary Simulation Data with Readsim"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{vignette}
+  %\VignetteIndexEntry{use-read-data}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
+# Set R Markdown options
+options(rmarkdown.html_vignette.check_title = FALSE)
+
+# Chunk options
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
